# sightline

./: .gitattributes  .gitignore  .npmrc  .prettierignore  .protonignore  CHANGELOG.md  CLAUDE.local.md.example  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: CHANGELOG.md  settings.json
.claude/agents/: code-reviewer.md  docs-writer.md  frontend-specialist.md  rust-specialist.md  security-reviewer.md  visual-research.md
.claude/hooks/: bash-firewall.sh  format-on-write.sh  stop-gate.sh
.claude/rules/: adr-discipline.md  commits.md  frontend.md  review-cycles.md  rust-backend.md  scope-control.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: HANDOFF-2026-04-25-phase-7.md  HANDOFF-2026-04-25-phase-8.md  HANDOFF-2026-04-25.md  HANDOFF-2026-04-26-v2.0.1.md  HANDOFF-2026-04-26-v2.0.2.md  HANDOFF-2026-04-26-v2.0.3.md  HANDOFF-2026-05-12.md  HANDOFF-TEMPLATE.md  INSTALL.md  MIGRATION-v1-to-v2.md  STATE.md  a11y-exceptions.md  api-contracts.md  data-model.md  design-tokens.md  implementation-plan.md  tech-spec.md
docs/adr/: 0001-stack-choice-tauri-rust.md  0002-local-persistence-sqlite-sqlx.md  0003-pinned-sidecar-binaries.md  0004-typed-ipc-via-tauri-specta.md  0005-background-polling-architecture.md  0006-package-manager-and-lockfile-policy.md  0007-ipc-typegen.md  0008-chapters-via-twitch-gql.md  0009-specta-optional-fields.md  0010-bandwidth-throttle.md  0011-library-layout-pluggability.md  0012-staging-atomic-move.md  0013-sidecar-bundling.md  0014-tray-daemon-architecture.md  0015-timeline-data-model.md  0016-checks-job-bundles-sidecars.md  0017-audit-policy-until-release.md  0018-watch-progress-model.md  0019-asset-protocol-scope.md  0020-cross-streamer-deep-link.md  (+21 more)
scripts/: bootstrap.ps1  bootstrap.sh  bundle-sidecars.ps1  bundle-sidecars.sh  dependency-audit.sh  install-git-hooks.sh  release-notes.sh  release-notes.test.ts  verify-sidecars.sh  verify.sh
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  audit.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_streamers_vods_chapters.sql  0003_poll_log.sql  0004_downloads.sql  0005_library_migrations.sql  0006_stream_intervals.sql  0007_streamer_favorites.sql  0008_watch_progress.sql  0009_completion_threshold.sql  0010_sync_sessions.sql  0011_sync_settings.sql  0012_cleanup_settings.sql  0013_cleanup_log.sql  0014_update_settings.sql  0015_quality_settings.sql  0016_vod_status_machine.sql  0017_distribution_settings.sql  0018_concurrency_default.sql
src-tauri/src/: error.rs  ipc.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  autostart.rs  cleanup.rs  credentials.rs  distribution.rs  downloads.rs  forecast.rs  health.rs  media.rs  mod.rs  poll.rs  quality.rs  settings.rs  storage.rs  streamers.rs  sync.rs  timeline.rs  updater.rs  vods.rs  watch.rs
src-tauri/src/domain/: chapter.rs  cleanup.rs  deep_link.rs  distribution.rs  download_state.rs  duration.rs  game_filter.rs  health.rs  interval_merger.rs  library_layout.rs  mod.rs  nfo.rs  poll_schedule.rs  quality.rs  quality_preset.rs  sanitize.rs  streamer.rs  sync.rs  timeline.rs  vod.rs  watch_progress.rs
src-tauri/src/infra/: clock.rs  db.rs  keychain.rs  mod.rs  throttle.rs
src-tauri/src/infra/ffmpeg/: cli.rs  fake.rs  mod.rs
src-tauri/src/infra/fs/: mod.rs  move_.rs  space.rs  staging.rs
src-tauri/src/infra/process/: liveness.rs  mod.rs  priority.rs
src-tauri/src/infra/twitch/: auth.rs  gql.rs  helix.rs  mod.rs
src-tauri/src/infra/ytdlp/: cli.rs  fake.rs  mod.rs  progress.rs
src-tauri/src/services/: autostart.rs  cleanup.rs  credentials.rs  distribution.rs  downloads.rs  encoder_detection.rs  events.rs  forecast.rs  health.rs  ingest.rs  library_migrator.rs  media_assets.rs  mod.rs  notifications.rs  poller.rs  reencode.rs  settings.rs  shortcuts.rs  storage.rs  streamers.rs  sync.rs  time_util.rs  timeline_indexer.rs  tray.rs  updater.rs  vods.rs  watch_progress.rs
src-tauri/tests/: graceful_shutdown.rs  health_integration.rs  ingest_integration.rs  ipc_bindings.rs  sidecar_smoke.rs  sync_math_parity.rs  sync_smoke.rs  tray_integration.rs
(+132 files in other folders)
