[package]
name = "sightline"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Sightline — multi-streamer GTA-RP VOD aggregator."
authors = ["Jan and Sightline contributors"]
license = "MIT"
repository = "https://github.com/sightline/sightline"
default-run = "sightline"

[lib]
name = "sightline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sightline"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
# tauri-specta integration is scheduled for Phase 2 when the command surface
# grows beyond a single handler — see ADR-0004 status and phase-01 session report.

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }

# --- Lint configuration --------------------------------------------------
# Enforced via CI: cargo clippy --all-targets -- -D warnings
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
# Extra hygiene
needless_pass_by_value = "warn"
redundant_clone = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"

[profile.dev]
incremental = true
