[package]
name = "sightline"
version = "2.0.3"
edition = "2024"
rust-version = "1.90"
description = "Sightline — multi-streamer GTA-RP VOD aggregator."
authors = ["Jan and Sightline contributors"]
license = "MIT"
repository = "https://github.com/kinsar-rasnik/sightline"
default-run = "sightline"

[lib]
name = "sightline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sightline"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "process", "io-util", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "linux-native"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
regex = "1"
once_cell = "1"
rand = "0.9"
async-trait = "0.1"
url = "2"
futures = "0.3"
governor = "0.10"
sha2 = "0.11"
hex = "0.4"
sysinfo = { version = "0.32", default-features = false, features = ["disk"] }
semver = { version = "1", features = ["serde"] }
opener = { version = "0.7", default-features = false }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
wiremock = "0.6"
pretty_assertions = "1"
filetime = "0.2"
proptest = "1"

[features]
# Exposes test helpers (e.g. `prime_token_for_tests`) so integration tests
# compiled as separate crates can access them. Always enabled for `cargo test`
# via Cargo's dev-dependency resolution; not part of the release artifact.
default = []
test-support = []

# --- Lint configuration --------------------------------------------------
# Enforced via CI: cargo clippy --all-targets -- -D warnings
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
# Extra hygiene
needless_pass_by_value = "warn"
redundant_clone = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"

[profile.dev]
incremental = true
